--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,23 @@
 <resources>
     <string name="app_name">FirstCalculator</string>
     <string name="action_settings">Settings</string>
+
+    <string name = "button_1">1</string>
+    <string name = "button_2">2</string>
+    <string name = "button_3">3</string>
+    <string name = "button_4">4</string>
+    <string name = "button_5">5</string>
+    <string name = "button_6">6</string>
+    <string name = "button_7">7</string>
+    <string name = "button_8">8</string>
+    <string name = "button_9">9</string>
+    <string name = "button_0">0</string>
+    <string name = "button_period">.</string>
+
+    <string name = "operation_button_plus">+</string>
+    <string name = "operation_button_minus">-</string>
+    <string name = "operation_button_multiplication">*</string>
+    <string name = "operation_button_division">/</string>
+    <string name = "operation_button_equal">=</string>
+
 </resources>
